--- a/style.css
+++ b/style.css
@@ -1,62 +1,59 @@
+body {
+  margin: 0%;
+}
+a {
+  text-decoration: none;
+}
+a:link {
+  color: black;
+}
+a:visited {
+  color: black;
+}
 
-            body {
-                    margin: 0%;
-            }
-            a {
-                    text-decoration: none;
-            }
-            a:link {
-                    color: black;   
-            }
-            a:visited{
-                    color: black;
-            }
+#grid_main {
+  display: grid;
+  grid-template-columns: 15% 1fr;
+}
 
-            #grid_main {
-                    display: grid;
-                    grid-template-columns: 15% 1fr;
-            }
+#nav {
+  border-right: 1px solid black;
+  padding-left: 3%;
+  padding-right: 3%;
+}
 
-            #nav {
-                    border-right: 1px solid black;
-                    padding-left: 3%;
-                    padding-right: 3%;
-            }
+#content {
+  padding-left: 3%;
+  padding-right: 3%;
+}
 
-            #content {
-                    padding-left: 3%;
-                    padding-right: 3%;
-            }
+#heading_title {
+  text-align: left;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  margin-left: 5%;
+  margin-right: 5%;
+  border-bottom: 1px black solid;
+  padding: 2%;
+  margin: 0%;
+  text-align: center;
+}
 
-            #heading_title {
-                    text-align: left;
-                    margin-top: 2%;
-                    margin-bottom: 2%;
-                    margin-left: 5%;
-                    margin-right: 5%;
-                    border-bottom: 1px black solid;
-                    padding: 2%;
-                    margin: 0%;
-                    text-align: center;
-            }
+iframe {
+  margin-top: 2%;
+  margin-bottom: 2%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+@media screen and (max-width: 600px) {
+  #grid_main {
+    display: block;
+  }
 
-
-            iframe {
-                    margin-top: 2%;
-                    margin-bottom: 2%;
-                    margin-left: 5%;
-                    margin-right: 5%;
-            }
-
-            @media(max-width: 800px) {
-                    #grid_main {
-                            display: block;
-                    }
-
-                    #nav {
-                            border-right: none;
-                            border-bottom: 1px black solid;
-                            padding-left: 3%;
-                            padding-right: 3%;
-                    }
-            }
+  #nav {
+    border-right: none;
+    border-bottom: 1px black solid;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+}
