--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
   margin: 0%;
 }
+body.night {
+  background: #00151f;
+}
 a {
   text-decoration: none;
 }
@@ -16,13 +19,13 @@ a:visited {
   grid-template-columns: 15% 1fr;
 }
 
-#nav {
+#grid_main_nav {
   border-right: 1px solid black;
   padding-left: 3%;
   padding-right: 3%;
 }
 
-#content {
+#grid_main_content {
   padding-left: 3%;
   padding-right: 3%;
 }
@@ -44,12 +47,42 @@ iframe {
   margin-left: 5%;
   margin-right: 5%;
 }
+
+.modeToggle {
+  position: absolute;
+  top: 1%;
+  left: 1%;
+  border: 1px solid #00151f;
+  height: 20px;
+  width: 45px;
+  border-radius: 20px;
+  transition: 0.5s;
+}
+.modeToggle.active {
+  background: #00151f;
+  border: 1px solid #ffffff;
+}
+.modeToggle:before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 16px;
+  height: 16px;
+  background: #00151f;
+  border-radius: 50%;
+  transition: 0.5s;
+}
+.modeToggle.active:before {
+  left: 27px;
+  background: #ffffff;
+}
 @media screen and (max-width: 800px) {
   #grid_main {
     display: block;
   }
 
-  #nav {
+  #grid_main_nav {
     border-right: none;
     border-bottom: 1px black solid;
     padding-left: 3%;
