--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ a:visited {
   margin-right: 5%;
   border-bottom: 1px black solid;
   padding: 2%;
+  padding-top: 6%;
   margin: 0%;
   text-align: center;
 }
@@ -50,7 +51,7 @@ iframe {
 
 .modeToggle {
   position: absolute;
-  top: 1%;
+  top: 0.5%;
   left: 1%;
   border: 1px solid #00151f;
   height: 20px;
@@ -76,6 +77,12 @@ iframe {
 .modeToggle.active:before {
   left: 27px;
   background: #ffffff;
+}
+
+#modeButtonDiv {
+  position: absolute;
+  top: 0.5%;
+  right: 1%;
 }
 @media screen and (max-width: 800px) {
   #grid_main {
