--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 body {
   margin: 0%;
 }
-body.night {
-  background: #00151f;
-}
 a {
   text-decoration: none;
 }
@@ -41,41 +38,19 @@ a:visited {
   margin: 0%;
   text-align: center;
 }
-
-.modeToggle {
+#modeToggleButton {
   position: absolute;
-  top: 0.5%;
-  left: 1%;
-  border: 1px solid #00151f;
-  height: 20px;
-  width: 45px;
-  border-radius: 20px;
-  transition: 0.5s;
-}
-.modeToggle.active {
-  background: #00151f;
-  border: 1px solid #ffffff;
-}
-.modeToggle:before {
-  content: "";
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  width: 16px;
-  height: 16px;
-  background: #00151f;
-  border-radius: 50%;
-  transition: 0.5s;
-}
-.modeToggle.active:before {
-  left: 27px;
-  background: #ffffff;
-}
-
-#modeButtonDiv {
-  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 100px;
+  height: 30px;
+  z-index: 1;
+  border: 1px solid #000;
+  border-radius: 4px;
+  cursor: pointer;
   top: 0.5%;
   right: 1%;
+  overflow: hidden;
 }
 @media screen and (max-width: 800px) {
   #grid_main {
