worked on 'fetch()' and removed unnecessary YouTube src and IMG src

--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ a:visited {
   margin: 0%;
   text-align: center;
 }
+
+.grid_main_nav_menu {
+  cursor: pointer;
+}
+
 .modeToggleButton {
   position: absolute;
   margin: 0;
